--- a/PowerLook-Aluguel/PowerLook-Aluguel/Produto.rdlc
+++ b/PowerLook-Aluguel/PowerLook-Aluguel/Produto.rdlc
@@ -270,7 +270,8 @@
                             <TextRun>
                               <Value>=Fields!preco.Value</Value>
                               <Style>
-                                <Format>'R$'0.00;('R$'0.00)</Format>
+                                <Format>'R$' 0.00;('R$' 0.00)</Format>
+                                <rd:FormatSymbolCulture>pt-BR</rd:FormatSymbolCulture>
                               </Style>
                             </TextRun>
                           </TextRuns>
